# LVGL-windows-app-cmake-template

./: CMakeLists.txt  LvglWindowsDesktopApplication.cpp  README.md
lvgl/: CMakeLists.txt
lvgl/env_support/cmake/: custom.cmake
lvgl/src/core/: lv_group.h
lvgl/src/drivers/windows/: lv_windows_display.c  lv_windows_input.c
lvgl/src/indev/: lv_indev.c
lvgl/src/widgets/textarea/: lv_textarea.c
